styles/main.css
/* ... */
@media only screen and (max-width: 350px) {
	.navbar {
		padding: 0 15px;
	}

	.navbar .logo img {
		width: 60px;
		height: 60px;
	}

	.navbar .logo span {
		font-size: 16px;
	}
}

@media only screen and (max-width: 576px) {
	.banner .text {
		font-size: 18px;
	}

	.banner .text p {
		padding: 20px 20px 0 20px;
	}

	.banner .scrolldown .chevron {
		height: 20px;
	}

	.banner .text .num {
		font-size: 14px;
	}

	.banner .text .num img {
		width: 15px;
		height: 15px;
	}

	.scrollFix {
		padding-top: 45px;
	}

	.desc {
		font-size: 16px;
		margin-bottom: 15px;
	}

	.p1 img, .p2 img, .p3 img {
		height: 290px;
	}

	#mainSlideshow .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
		height: 290px;
		object-fit: cover;
	}

	#box, #toolkit, #hanger {
		height: 35px;
		width: auto;
	}

	.h1 {
		font-size: 28px;
	}

	.p5 .h4 {
		font-size: 16px;
	}

	.p11 .h3 {
		font-size: 24px;
	}

	.accordion .card {
		padding: 0;
	}

	.card-header {
		padding: 8px;
	}

	.p6 .accordion .h5 {
		font-size: 14px;
	}

	.p6 .accordion strong,
	.p6 .accordion .price {
		font-size: 12px;
	}

	.btn-link {
		font-size: 14px;
	}

	.accordion .card .card-body ul li {
		font-size: 14px;
	}

	.accordion .card .card-body {
		padding: 10px 25px;
	}

	.p7 .row {
		margin-bottom: 0;
	}

	.p8 .comment {
		padding: 30px;
		height: 430px;
	}

	.p8 .text {
		padding: 0;
	}

	.p8 .comment .quote {
		font-size: 60px;
		height: 53px;
	}

	.p8 .comment .content {
		font-size: 14px;
	}

	.p8 .comment .avatar {
		width: 75px;
	}

	.comment .name {
		font-size: 18px;
	}

	.comment .date {
		font-size: 16px;
	}

	#trendsSlideshow .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
		height: auto;
	}

	footer .col-md {
		margin-bottom: 15px;
	}
}



@media only screen and (min-width: 576px) {
	.banner .text {
		font-size: 26px;
	}

	.banner .text p {
		padding: 30px 30px 0 30px;
	}

	.banner .scrolldown .chevron {
		height: 25px;
	}

	.banner .text .num {
		font-size: 16px;
	}

	.banner .text .num img {
		width: 17px;
		height: 17px;
	}

	.scrollFix {
		padding-top: 45px;
	}

	.desc {
		font-size: 24px;
		margin-bottom: 30px;
	}

	.p1 img, .p2 img, .p3 img {
		height: 350px;
	}

	#mainSlideshow .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
		height: auto;
		object-fit: cover;
	}

	.p5 .h4 {
		font-size: 20px;
	}

	.p5 .check {
		margin-bottom: 10px;
	}

	.accordion .card {
		padding: 0;
	}

	.card-header {
		padding: 8px;
	}

	.p6 .accordion .h5 {
		font-size: 16px;
	}

	.p6 .accordion strong,
	.p6 .accordion .price {
		font-size: 14px;
	}

	.btn-link {
		font-size: 18px;
	}

	.accordion .card .card-body ul li {
		font-size: 18px;
	}

	.accordion .card .card-body {
		padding: 10px 25px;
	}

	.p7 .row {
		margin-bottom: 0;
	}

	.p8 .comment {
		padding: 30px;
		height: 470px;
	}

	.p8 .text {
		padding: 0 30px;
	}

	.p8 .comment .quote {
		font-size: 80px;
		height: 70px;
	}

	.p8 .comment .content {
		font-size: 16px;
	}

	.p8 .comment .avatar {
		width: 90px;
	}

	.comment .name {
		font-size: 18px;
	}

	.comment .date {
		font-size: 16px;
	}

	#trendsSlideshow .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
		height: auto;
	}

	footer .col-md {
		margin-bottom: 15px;
	}
}

@media only screen and (min-width: 768px) {
	.banner .text {
		font-size: 38px;
	}

	.banner .text p {
		padding: 45px 45px 0 45px;
	}

	.banner .scrolldown .chevron {
		height: 35px;
	}

	.banner .text .num {
		font-size: 20px;
	}

	.banner .text .num img {
		width: 23px;
		height: 23px;
	}

	.scrollFix {
		padding-top: 45px;
	}

	.desc {
		font-size: 1.6rem;
		margin-bottom: 30px;
	}

	.p1 img, .p2 img, .p3 img {
		height: 385px;
	}

	#mainSlideshow .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
		height: auto;
		object-fit: cover;
	}

	#box, #toolkit, #hanger {
		height: 35px;
	}

	.p5 .h4 {
		font-size: 14px;
	}

	.p5 .check {
		margin-bottom: 0;
	}

	.p6 .accordion .h5 {
		font-size: 16px;
	}

	.p6 .accordion strong,
	.p6 .accordion .price {
		font-size: 14px;
	}

	.accordion .card {
		padding: 0;
	}

	.card-header {
		padding: 8px;
	}

	.btn-link {
		font-size: 18px;
	}

	.accordion .card .card-body ul li {
		font-size: 18px;
	}

	.accordion .card .card-body {
		padding: 10px 25px;
	}

	.p7 .row {
		margin-bottom: 0;
	}

	.p8 .comment {
		padding: 45px;
		height: 500px;
	}

	.p8 .text {
		padding: 0 45px;
	}

	.p8 .comment .content {
		font-size: 18px;
	}

	.p8 .comment .avatar {
		width: 85px;
	}

	.comment .name {
		font-size: 18px;
	}

	.comment .date {
		font-size: 16px;
	}

	#trendsSlideshow .carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
		height: auto;
	}

	footer .col-md {
		margin-bottom: 15px;
	}
}

@media only screen and (max-width: 992px) {
	nav ul li {
		height: auto;
	}

	nav ul li a {
		padding: 10px;
	}
}
/* ... */

